--- a/client/src/app/Dishes/dish-list/dish-list.component.html
+++ b/client/src/app/Dishes/dish-list/dish-list.component.html
@@ -4,7 +4,11 @@
       Create Disc
     </button>
   </mat-action-row>
-  <mat-card class="item-card" *ngFor="let disc of dishes">
+  <mat-card
+    class="item-card"
+    *ngFor="let disc of dishes"
+    [routerLink]="['/dishes', disc?._id]"
+  >
     <img
       mat-card-image
       src="https://material.angular.io/assets/img/examples/shiba2.jpg"
@@ -16,4 +20,7 @@
       <h2 style="color: red; text-align: right">${{ disc.price }}</h2>
     </mat-card-content>
   </mat-card>
+  <div *ngIf="">
+    <router-outlet></router-outlet>
+  </div>
 </main>
