--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -5,6 +5,10 @@
       fontIcon="account_box"
       class="custom-icon"
     ></mat-icon>
+    <div *ngIf="error" class="error-block">
+      <p class="error-message">{{ error }}</p>
+    </div>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
     <form
       (submit)="onSignUp(signupForm)"
       #signupForm="ngForm"
@@ -63,7 +67,7 @@
           name="confirmPassword"
           ngModel
           type="password"
-          placeholder="Password"
+          placeholder="ConfirmPassword"
           #confirmPasswordInput="ngModel"
           required
         />
