--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,12 +1,5 @@
 <mat-toolbar color="primary">
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-  >
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>MyApp</span>
+  <span routerLink="/">MyApp</span>
   <span class="spacer"></span>
 
   <ul>
